@@ -1,17 +1,13 @@
 /*
- * Copyright 2002-2022 the original author or authors.
+ * Copyright 2002-2024 the original author or authors.
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the
+ * License at
  *
- *      https://www.apache.org/licenses/LICENSE-2.0
+ * https://www.apache.org/licenses/LICENSE-2.0
  *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
+ * CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
  */
 
 package org.springframework.amqp.rabbit.connection;
@@ -20,6 +16,7 @@ import java.io.IOException;
 import java.net.InetAddress;
 
 import org.springframework.amqp.AmqpResourceNotAvailableException;
+import org.springframework.amqp.AmqpTimeoutException;
 import org.springframework.amqp.rabbit.support.RabbitExceptionTranslator;
 import org.springframework.util.ObjectUtils;
 
@@ -28,6 +25,7 @@ import com.rabbitmq.client.BlockedListener;
 import com.rabbitmq.client.Channel;
 import com.rabbitmq.client.impl.NetworkConnection;
 import com.rabbitmq.client.impl.recovery.AutorecoveringConnection;
+import org.springframework.util.backoff.BackOffExecution;
 
 /**
  * Simply a Connection.
@@ -46,16 +44,32 @@ public class SimpleConnection implements Connection, NetworkConnection {
 
 	private volatile boolean explicitlyClosed;
 
-	public SimpleConnection(com.rabbitmq.client.Connection delegate,
-			int closeTimeout) {
+	private BackOffExecution backOffExecution;
+
+	public SimpleConnection(com.rabbitmq.client.Connection delegate, int closeTimeout) {
+		this(delegate, closeTimeout, null);
+
+	}
+
+	public SimpleConnection(com.rabbitmq.client.Connection delegate, int closeTimeout,
+			BackOffExecution backOffExecution) {
 		this.delegate = delegate;
 		this.closeTimeout = closeTimeout;
+		this.backOffExecution = backOffExecution;
 	}
 
 	@Override
 	public Channel createChannel(boolean transactional) {
 		try {
 			Channel channel = this.delegate.createChannel();
+			while (channel == null && backOffExecution != null) {
+				long interval = backOffExecution.nextBackOff();
+				if (interval == BackOffExecution.STOP) {
+					break;
+				}
+				Thread.sleep(interval);
+				channel = this.delegate.createChannel();
+			}
 			if (channel == null) {
 				throw new AmqpResourceNotAvailableException("The channelMax limit is reached. Try later.");
 			}
@@ -64,6 +78,10 @@ public class SimpleConnection implements Connection, NetworkConnection {
 				channel.txSelect();
 			}
 			return channel;
+		}
+		catch (InterruptedException e) {
+			Thread.currentThread().interrupt();
+			throw new AmqpTimeoutException("Interrupted while creating a new channel", e);
 		}
 		catch (IOException e) {
 			throw RabbitExceptionTranslator.convertRabbitAccessException(e);
@@ -87,16 +105,17 @@ public class SimpleConnection implements Connection, NetworkConnection {
 
 	/**
 	 * True if the connection is open.
+	 * 
 	 * @return true if the connection is open
 	 * @throws AutoRecoverConnectionNotCurrentlyOpenException if the connection is an
-	 * {@link AutorecoveringConnection} and is currently closed; this is required to
-	 * prevent the {@link CachingConnectionFactory} from discarding this connection
-	 * and opening a new one, in which case the "old" connection would eventually be recovered
-	 * and orphaned - also any consumers belonging to it might be recovered too
-	 * and the broker will deliver messages to them when there is no code actually running
-	 * to deal with those messages (when using the {@code SimpleMessageListenerContainer}).
-	 * If we have actually closed the connection
-	 * (e.g. via {@link CachingConnectionFactory#resetConnection()}) this will return false.
+	 * {@link AutorecoveringConnection} and is currently closed; this is required to prevent
+	 * the {@link CachingConnectionFactory} from discarding this connection and opening a new
+	 * one, in which case the "old" connection would eventually be recovered and orphaned -
+	 * also any consumers belonging to it might be recovered too and the broker will deliver
+	 * messages to them when there is no code actually running to deal with those messages
+	 * (when using the {@code SimpleMessageListenerContainer}). If we have actually closed the
+	 * connection (e.g. via {@link CachingConnectionFactory#resetConnection()}) this will
+	 * return false.
 	 */
 	@Override
 	public boolean isOpen() {
@@ -105,7 +124,6 @@ public class SimpleConnection implements Connection, NetworkConnection {
 		}
 		return this.delegate != null && (this.delegate.isOpen());
 	}
-
 
 	@Override
 	public int getLocalPort() {
@@ -150,9 +168,7 @@ public class SimpleConnection implements Connection, NetworkConnection {
 
 	@Override
 	public String toString() {
-		return "SimpleConnection@"
-				+ ObjectUtils.getIdentityHexString(this)
-				+ " [delegate=" + this.delegate + ", localPort=" + getLocalPort() + "]";
+		return "SimpleConnection@" + ObjectUtils.getIdentityHexString(this) + " [delegate=" + this.delegate
+				+ ", localPort=" + getLocalPort() + "]";
 	}
-
 }
