@@ -70,7 +70,6 @@ import org.mockito.ArgumentMatcher;
 import org.mockito.InOrder;
 
 import org.springframework.amqp.AmqpConnectException;
-import org.springframework.amqp.AmqpResourceNotAvailableException;
 import org.springframework.amqp.AmqpTimeoutException;
 import org.springframework.amqp.rabbit.connection.AbstractConnectionFactory.AddressShuffleMode;
 import org.springframework.amqp.rabbit.connection.CachingConnectionFactory.CacheMode;
@@ -79,8 +78,6 @@ import org.springframework.amqp.rabbit.core.RabbitTemplate;
 import org.springframework.amqp.utils.test.TestUtils;
 import org.springframework.context.ApplicationContext;
 import org.springframework.context.event.ContextClosedEvent;
-import org.springframework.retry.support.RetryTemplate;
-import org.springframework.retry.support.RetryTemplateBuilder;
 import org.springframework.test.util.ReflectionTestUtils;
 
 import com.rabbitmq.client.Address;
@@ -90,7 +87,6 @@ import com.rabbitmq.client.ConfirmListener;
 import com.rabbitmq.client.ConnectionFactory;
 import com.rabbitmq.client.GetResponse;
 import com.rabbitmq.client.ShutdownSignalException;
-
 /**
  * @author Mark Pollack
  * @author Dave Syer
@@ -1969,33 +1965,6 @@ public class CachingConnectionFactoryTests extends AbstractConnectionFactoryTest
 		assertThat(connShutDown.get()).isTrue();
 		assertThat(chanShutDown.get()).isFalse();
 	}
-	@Test
-	public void testRetryParam(){
-		com.rabbitmq.client.ConnectionFactory mockConnectionFactory = mock(com.rabbitmq.client.ConnectionFactory.class);
-		CachingConnectionFactory ccf = new CachingConnectionFactory(mockConnectionFactory);
-		ccf.setRetryTemplate(new RetryTemplateBuilder().build());
-		Connection bareConnection = ccf.createBareConnection();
-		assertThat(bareConnection.getClass()).isEqualTo(RetryableConnection.class);
-	}
 
-
-	@Test
-	public void testWaitForCreateChannel() throws Exception {
-		int maxAttempts = 3;
-		long backOffTime = 3000L;
-		com.rabbitmq.client.Connection mockConnection = mock(com.rabbitmq.client.Connection.class);
-		given(mockConnection.createChannel()).willReturn(null);
-		RetryTemplate retryTemplate = new RetryTemplateBuilder().fixedBackoff(backOffTime).maxAttempts(maxAttempts)
-				.retryOn(AmqpResourceNotAvailableException.class).build();
-		RetryableConnection retryableConnection = new RetryableConnection(mockConnection, 5, retryTemplate);
-		long time1 = System.currentTimeMillis();
-		try {
-			retryableConnection.createChannel(false);
-		}
-		catch (Exception e) {
-		}
-		long time2 = System.currentTimeMillis();
-		assertThat((time2 - time1)).isGreaterThanOrEqualTo((maxAttempts-1) * backOffTime);
-	}
 
 }
