@@ -1,3 +1,4 @@
+// suppress inspection "AsciiDocLinkResolve" for whole file
 [[whats-new]]
 = What's New
 :page-section-summary-toc: 1
@@ -18,3 +19,7 @@ It remains possible to configure your own logging behavior by setting the `exclu
 In addition, the `SimpleMessageListenerContainer` consumer restart after such an exception is now logged at DEBUG level by default (previously INFO).
 A new method `logRestart()` has been added to the `ConditionalExceptionLogger` to allow this to be changed.
 See xref:amqp/receiving-messages/consumer-events.adoc[Consumer Events] and <<channel-close-logging>> for more information.
+
+==== `@AbstractConnectionFactory` Changes
+A new property `connectionCreatingBackOff` allows to create `SimpleConnection` with backoff policy to support for retry mechanism at the connection level for creating channels to avoid the exception in connection module
+
